# CommunityScripts

./: .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  PLUGINS-LIST.md  README.md  build-config.json  build.js  build_site.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  validate.js
.github/: CODEOWNERS
.github/workflows/: check_code_format.yml  deploy.yml  on_pr_check_code_format.yml  on_push_check_code_format.yml  on_push_deploy.yml  process_code.yml  validate.yml
3rd party/StashPlexAgent.bundle/: README.md
archive/: README.md
archive/AITagger/: README.md  ai_video_result.py  requirements.txt  utility.py
archive/renamerOnUpdate/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config_loader.py  data_extraction.py  filename_sanitizer.py  log.py  platform_utils.py  plugin_input_models.py  pyproject.toml  rename_operations.py  renamerOnUpdate.py  renamerOnUpdate.yml  renamerOnUpdate_config.py  stash_graphql.py  stash_graphql_models.py  template_processing.py
archive/visage/: visage.css
custom_javascript/open_scene_in_iina/: README.md  custom.js
hook_plugins/renamerOnUpdate/: renamerOnUpdate.py  renamerOnUpdate.yml
plugins/: ChangeFileMonitor
plugins/1. stashUserscriptLibrary/: stashUserscriptLibrary.js
plugins/2. stats/: stats.js
plugins/3. Stash Batch Result Toggle/: stashBatchResultToggle.js
plugins/AHavenVLMConnector/: CHANGELOG.md  README.md  ahavenvlmconnector.yml  exit_tracker.py  haven_media_handler.py  haven_vlm_config.py  haven_vlm_connector.py  haven_vlm_engine.py  haven_vlm_utility.py  requirements.txt  run_tests.py  (+6 more)
schema/: plugin.schema.json
stable/: index.yml
themes/: README.md
validator/: index.js  package.json  plugin.schema.json
(+834 files in other folders)
